# Vigil

./: .gitignore  AGENT.md  DEVELOP.md  README.md  config.yaml  flake.nix  pyproject.toml  run_gui.sh  shell.nix
.claude/: settings.local.json
nix/: module.nix
tests/: conftest.py
tests/integration/: test_engine.py
tests/plugins/: test_blockurl.py  test_borg.py  test_calibre_web.py  test_cloud.py  test_command.py  test_connections.py  test_containers.py  test_cpu_usage.py  test_ddns_updater.py  test_disk_space.py  test_diskio.py  test_dns_record.py  test_filesystems.py  test_folders.py  test_freshrss.py  test_frigate.py  test_gpu.py  test_group.py  test_interrupts.py  test_load_average.py  test_memory_usage.py  test_mosquitto.py  test_network_usage.py  test_oom.py  test_openbooks.py  test_pihole.py  test_ports.py  test_processes.py  test_push.py  test_qbittorrent.py  test_radicale.py  test_raid.py  test_service_list.py  test_smart_disk.py  test_syncthing.py  test_system_stats.py  test_systemd_service.py  test_temperature.py  test_traccar.py  test_trilium.py  (+7 more)
tests/unit/: test_auth.py  test_config_file.py  test_database.py  test_exporters.py  test_job_controller.py  test_metric_scoping.py  test_poll_guard.py  test_safe_timer.py  test_ssh_collector.py  test_ssh_connector.py  test_ssh_process_kill.py  test_ssh_runner.py  test_time_utils.py  test_ui_plugin_snapshot.py
vigil/: __init__.py  __main__.py
vigil/collector/: __main__.py  internal_api.py  main.py  plugin_base.py
vigil/collector/collectors/: ssh_collector.py
vigil/collector/controllers/: job_controller.py  ssh_controller.py
vigil/collector/exporters/: influxdb.py  prometheus.py
vigil/collector/orchestration/: collector_storage_orchestrator.py  network_orchestrator.py
vigil/components/controllers/: ssh_controller.py
vigil/core/: api.py  auth.py  config.py  controller.py  database.py  engine.py  main.py  plugin.py  ssh.py
vigil/core/app/: collector_main.py  main.py  web_main.py
vigil/core/common/: base_plugin.py  plugin_config.py  plugin_helpers.py  plugin_utils.py  ssh_connector.py  time_utils.py
vigil/core/connectors/: engine.py  internal_api.py  job_controller.py  (+2 more)
vigil/plugins/: blockurl.py  borg.py  calibre_web.py  cloud.py  command.py  connections.py  containers.py  cpu_usage.py  ddns_updater.py  disk_space.py  diskio.py  dns_record.py  filesystems.py  folders.py  freshrss.py  frigate.py  gpu.py  group.py  interrupts.py  load_average.py  memory_usage.py  mosquitto.py  network_usage.py  oom.py  openbooks.py  pihole.py  ports.py  processes.py  push.py  qbittorrent.py  radicale.py  raid.py  service_list.py  smart_disk.py  syncthing.py  system_stats.py  systemd_service.py  temperature.py  traccar.py  trilium.py  (+7 more)
vigil/web/: __main__.py  api.py  auth.py  engine.py  plugin_base.py  remote_proxy.py  web_plugin_base.py
(+50 files in other folders)
