[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vigil"
version = "0.1.0"
description = "A lightweight, pluggable network and system monitor for Linux"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "paramiko>=3.4.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "peewee>=3.17.1",
    "nicegui>=1.4.12",
]

[project.scripts]
vigil = "vigil.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vigil*"]