[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vigil"
version = "0.1.0"
description = "A lightweight, pluggable network and system monitor for Linux"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "peewee>=3.17.1",
    "nicegui>=1.4.12",
]

[project.scripts]
vigil = "vigil.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vigil*"]

[tool.setuptools.package-data]
vigil = ["static/*"]