[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vigil"
version = "0.1.0"
description = "A lightweight, pluggable network and system monitor for Linux"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "requests>=2.31.0",
    "PyYAML>=6.0.1",
    "peewee>=3.17.1",
    "nicegui>=1.4.12",
    "dnspython>=2.6.0",
    # Async HTTP client for the web process's calls to the collector's
    # internal API (see vigil/core/connectors/remote_proxy.py).
    # Already a transitive dependency of fastapi/uvicorn; declared directly
    # since Vigil's own code imports it at runtime, not just in tests.
    "httpx>=0.27.0",
    # Native async SSH transport (see vigil/core/connectors/ssh_connector.py) —
    # replaces shelling out to the system `ssh` client with a persistent
    # asyncssh connection per host, removing the fork/exec cost and the
    # collector's old thread-pool/semaphore ceiling.
    "asyncssh>=2.14.0",
]

[project.scripts]
vigil-collector = "vigil.core.app.collector_main:main"
vigil-web = "vigil.core.app.web_main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["vigil*"]

[tool.setuptools.package-data]
vigil = ["core/ui/static/*"]